# ezdwm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  config.def.hpp  config.mk  drw.cpp  drw.hpp  ezdwm  ezdwm.1  meson.build  temp.md  ultra.1  util.hpp  x.hpp
.cache/clangd/index/: config.hpp.FF54D4393E621CC6.idx  drw.cpp.352E0BF749DFE5F7.idx  drw.hpp.E848E6B2A2F98870.idx  main.cpp.4C86F7557707ABA9.idx  util.cpp.FE40DDE33DCE5CDE.idx  util.hpp.9E08D8BCA3FDA62B.idx  x.hpp.46C686867D04992D.idx
inc/: config.hpp  util.hpp
include/: config.hpp  drw.hpp  util.hpp  x.hpp
src/: config.def.hpp  config.hpp  drw.cpp  drw.hpp  dwm.cpp  main.cpp  util.cpp
